<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.couchbase.client</groupId>
        <artifactId>couchbase-jvm-clients</artifactId>
        <version>1.9.0-SNAPSHOT</version>
    </parent>

    <artifactId>java-client</artifactId>
    <version>3.0.0-SNAPSHOT</version>

    <name>Couchbase Java SDK</name>
    <description>The official Couchbase Java SDK</description>

    <dependencies>
        <!-- External, Required Dependencies -->
        <dependency>
            <groupId>com.couchbase.client</groupId>
            <artifactId>core-io</artifactId>
        </dependency>

        <!-- External, Optional Dependencies -->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${jackson.version}</version>
            <optional>true</optional>
        </dependency>

        <!-- Test Dependencies -->
        <dependency>
            <groupId>com.couchbase.client</groupId>
            <artifactId>test-utils</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j-impl</artifactId>
            <version>${log4j-slf4j-impl.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.2.0</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.1.1</version>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                        <configuration>
                            <source>8</source>
                            <doclint>none</doclint>
                            <quiet>true</quiet>
                            <stylesheetfile>${project.basedir}/../config/javadoc/style.css</stylesheetfile>
                        </configuration>
                    </execution>
                </executions>
                <configuration>
                    <links>
                        <link>https://projectreactor.io/docs/core/release/api/</link>
                    </links>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>build-helper-maven-plugin</artifactId>
                <version>3.0.0</version>
                <executions>
                    <execution>
                        <id>add-integration-test-source-as-test-sources</id>
                        <phase>generate-test-sources</phase>
                        <goals>
                            <goal>add-test-source</goal>
                        </goals>
                        <configuration>
                            <sources>
                                <!-- add the following sources in addition to the unit tests -->
                                <source>${test-source-directory}</source>
                            </sources>
                        </configuration>
                    </execution>
                    <execution>
                        <id>add-integration-test-resource-as-test-resource</id>
                        <phase>generate-test-resources</phase>
                        <goals>
                            <goal>add-test-resource</goal>
                        </goals>
                        <configuration>
                            <resources>
                                <resource>
                                    <directory>${test-resource-directory}</directory>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>buildnumber-maven-plugin</artifactId>
                <version>1.4</version>
                <executions>
                    <execution>
                        <phase>validate</phase>
                        <goals><goal>create</goal></goals>
                    </execution>
                </executions>
                <configuration>
                    <getRevisionOnlyOnce>true</getRevisionOnlyOnce>
                    <shortRevisionLength>8</shortRevisionLength>
                    <attach>true</attach>
                    <addOutputDirectoryToResources>true</addOutputDirectoryToResources>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
                    <archive>
                        <manifestEntries>
                            <Build-Time>${maven.build.timestamp}</Build-Time>
                        </manifestEntries>
                        <manifestSections>
                            <manifestSection>
                                <!-- the part after couchbase- needs to match with the agent title in the env -->
                                <name>couchbase-java</name>
                                <manifestEntries>
                                    <Impl-Version>${project.version}</Impl-Version>
                                    <Impl-Git-Revision>${buildNumber}</Impl-Git-Revision>
                                </manifestEntries>
                            </manifestSection>
                        </manifestSections>
                    </archive>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>default</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <!-- by default, add also the int tests -->
                <test-source-directory>src/integrationTest/java</test-source-directory>
                <test-resource-directory>src/integrationTest/resources</test-resource-directory>
            </properties>
        </profile>
        <profile>
            <id>unit</id>
            <activation>
                <property>
                    <name>unit</name>
                    <value>true</value>
                </property>
            </activation>
            <properties>
                <!-- just adding the unit tests again, noop. -->
                <test-source-directory>src/test/java</test-source-directory>
                <test-resource-directory>src/test/resources</test-resource-directory>
            </properties>
        </profile>
    </profiles>

</project>
